@@ -1,6 +1,6 @@
 Package: oce
 Version: 0.1.73
-Date: 2008-08-25
+Date: 2008-08-30
 Title: Analysis of Oceanographic data
 Author: Dan Kelley <Dan.Kelley@Dal.Ca>
 Maintainer: Dan Kelley <Dan.Kelley@Dal.Ca>
